# repave

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  release-please-config.json  repave.config.yaml.example
.github/: commitlint.config.mjs  pull_request_template.md
.github/actions/ci-paths/: action.yml
.github/rulesets/: README.md  main-branch.json
.github/workflows/: ci.yml  conventional-commits.yml  operator.yml  pr-branch-cleanup.yml  python-quality-security.yml  release-please.yml  release.yml  sync-ruleset.yml
blueprints/ansible-role-generic/: blueprint.yaml
blueprints/ansible-role-generic/template/: .ansible-lint  .gitignore  .yamllint  README.md.jinja  copier.yaml
blueprints/terraform-module-generic/: blueprint.yaml  license-catalog.json  provider-catalog.json
blueprints/terraform-module-generic/partials/: resource.tf.jinja
blueprints/terraform-module-generic/template/: .checkov.yml  .gitignore  .tflint.hcl.jinja  LICENSE.jinja  README.md.jinja  copier.yaml  locals.tf.jinja  main.tf.jinja  outputs.tf.jinja  variables.tf.jinja  versions.tf.jinja
deploy/local/: Dockerfile  README.md  docker-compose.yml
docs/: concepts.md  operator-local-dev.md  operator-standards.md  portal-design.md  roadmap.md
engine/: CHANGELOG.md  README.md  pyproject.toml
engine/src/repave_engine/: __init__.py  api.py  blueprint.py  cli.py  gate_builtin.py  gate_registry.py  gate_runners.py  gates.py  github.py  output_template.py  pipeline.py  pr.py  provenance.py  provenance_inputs.py  provider_catalog.py  render.py  settings.py  target_repo.py  upgrade_plan.py
engine/src/repave_engine/templates/: blueprint_form.html  index.html  result.html
engine/tests/: conftest.py  helpers.py  test_ansible_gates.py  test_ansible_lint_policies.py  test_api.py  test_blueprint.py  test_checkov_policies.py  test_cli.py  test_gate_registry.py  test_gates.py  test_github.py  test_license.py  test_pipeline.py  test_pr.py  test_provenance.py  test_provider_catalog.py  test_render.py  test_settings.py  test_target_repo.py  test_upgrade_plan.py
examples/ansible-lint/: README.md
examples/ansible-lint/pack/: .ansible-lint  .ansible-lint-ignore
examples/checkov/: README.md
examples/checkov/policies/: __init__.py  custom_001_terraform_version_exists.yaml  custom_002_terraform_version_capped.yaml  repave_module_layout.py  repave_null_resource_locals.py  repave_policy_utils.py  repave_security.py
examples/standards/: README.md  ansible-role-standard.md  terraform-module-standard.md
examples/standards/ansible/: README.md  collection-standard.md  playbook-project-standard.md  role-standard.md  (+1 more)
operator/: .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum
operator/cmd/: main.go
operator/hack/: boilerplate.go.txt
schemas/: blueprint.schema.json  golden-path-artifact.schema.json  inputs.schema.json
scripts/: generate-provider-catalog.py
(+73 files in other folders)
