[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repave-engine"
version = "0.1.0"
description = "Governed, repeatable platform engineering generation engine"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Eric Skaggs" }]
dependencies = [
  "copier>=9.0.0",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27.0",
]

[project.scripts]
repave = "repave_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
