[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repave-engine"
version = "1.7.0"
description = "Governed, repeatable platform engineering generation engine"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Eric Skaggs" }]
dependencies = [
  "copier>=9.0.0",
  "pyyaml>=6.0",
  "jsonschema>=4.0",
  "fastapi>=0.110.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "bandit[toml]>=1.8.0",
  "pip-audit>=2.9.0",
  "types-PyYAML",
]

[project.scripts]
repave = "repave_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
repave_engine = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
mypy_path = ["src"]
packages = ["repave_engine"]

[[tool.mypy.overrides]]
module = ["copier.*", "jsonschema.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["repave_engine.api"]
disable_error_code = ["arg-type"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B404", "B603"]  # subprocess used intentionally for gate execution

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/repave_engine/__init__.py:__version__"]
tag_format = "v{version}"
commit_message = "chore(release): {version}"
build_command = "uv build"
upload_to_vcs_release = true
upload_to_pypi = false
